--- a/css/authentication-form.css
+++ b/css/authentication-form.css
@@ -12,6 +12,12 @@ body {
 
 .content {
   padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
+  max-width: 900px;
+  margin: auto;
 }
 
 h2 {
@@ -27,11 +33,26 @@ p {
 form {
   border: 1px solid #a9a9a9;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 650px;
+  max-width: 100%;
+  background: white;
 }
 
 .subtext {
   color: #a9a9a9;
   font-weight: unset;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+.form-input-control {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 #sign-in,
@@ -46,6 +67,12 @@ a {
 
 label {
   font-weight: bold;
+}
+
+label.city {
+  font-weight: bold;
+  display: block;
+  margin-top: 15px;
 }
 
 input {
@@ -82,4 +109,14 @@ input[type="submit"]:hover {
 
 .form select {
   height: 30px;
+}
+
+.form-group-horizontal-control {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: end;
+}
+
+.form-input-control {
+  width: -webkit-fill-available;
 }
