--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -37,9 +37,18 @@ section {
 }
 
 .header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 10px 30px;
 }
 
 .logo-search {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 20px;
 }
 
 .logo {
@@ -50,7 +59,10 @@ section {
 }
 
 .search-bar {
-  width: 400px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  max-width: 400px;
   background: #1f1f27;
   padding: 10px 20px;
   border-radius: 20px;
@@ -71,6 +83,10 @@ section {
 }
 
 .options {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  min-width: max-content;
 }
 
 .option {
@@ -86,7 +102,10 @@ section {
 
 .categories {
   background-color: #2b2d36;
-  padding-top: 20px;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .category {
@@ -111,13 +130,38 @@ section {
 }
 
 .view-options {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
+
+.view-option {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8d8ba5;
+  border-radius: 6px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.view-option.active {
+  background-color: #d5ef9a;
+  border-color: #d5ef9a;
+  color: #1f1f27;
+}
+
 
 i.fa-th-list {
   transform: rotate(180deg);
 }
 
 .section-control {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding-bottom: 20px;
   border-bottom: 1px solid #8d8ba5;
 }
@@ -127,6 +171,13 @@ i.fa-th-list {
   height: 40px;
   border: 1px solid #8d8ba5;
   cursor: pointer;
+}
+
+.section-control h2 {
+  flex-grow: 1;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
 }
 
 .products {
@@ -147,12 +198,16 @@ i.fa-th-list {
 }
 
 .product-name {
-  font-size: 28px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .product-description {
-  line-height: 24px;
+  font-size: 17px;
   color: #8d8ba5;
+  max-width: 90%;
 }
 
 .product-price {
@@ -182,60 +237,115 @@ i.fa-th-list {
 /* GRID VIEW STYLES */
 
 .grid.products {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .grid .product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 300px;
+  min-height: 500px;
   padding-bottom: 30px;
 }
 
 .grid .product-image-wrapper {
+  width: 100%;
   height: 200px;
+  border-radius: 5px;
 }
 
 .grid .product-data {
   height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .grid .product-info {
-  text-align: center;
-  padding: 0 20px 30px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
 
 .grid .product-action {
-  padding-top: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 15px 20px;
   border-top: 1px solid #8d8ba5;
+  margin-top: auto;
+  min-height: 60px;
 }
 
 /* LINE VIEW STYLES */
 
 .lines.products {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .lines .product {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between;
   padding: 20px;
 }
 
 .lines .product-image-wrapper {
   min-width: 300px;
   height: 200px;
+  display: flex;
 }
 
 .lines .product-data {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
 }
 
 .lines .product-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .lines .product-action {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 150px;
+  padding: 15px 20px;
+  border-left: 1px solid #8d8ba5;
 }
 
 /* LINES-ACTION VIEW */
 
 .lines-action.products {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .lines-action .product {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  flex-direction: row;
 }
 
 .lines-action .product-image-wrapper {
@@ -244,13 +354,26 @@ i.fa-th-list {
 }
 
 .lines-action .product-data {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .lines-action .product-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-grow: 1;
 }
 
 .lines-action .product-action {
-  border-left: 1px solid #8d8ba5;
-  padding-left: 30px;
-  min-width: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+  padding: 15px 20px;
+  margin-top: auto;
 }
